# ndl-ocr-lite-lambda

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
cdk/: app.py  cdk.json  pyproject.toml
cdk/schemas/: ocr-tool-schema.json
cdk/stacks/: gateway_stack.py  ocr_lambda_stack.py
deployments/: template.yaml
lambda/: handler.py  input_parser.py  ocr_engine.py  pdf_utils.py  provisioner.py  pyproject.toml  requirements.txt
layers/: requirements.txt
spec/: design.md  implementation_qa.md  kickoff.md  requirements.md
spec/proposal/: strengthen_tests_to_prevent_deployment_failures.md
tests/: conftest.py  helpers.py  test_deploy_readiness.py  test_handler_e2e.py
